Update and rename portofolio.html to index.html

--- a/index.html
+++ b/index.html
@@ -64,13 +64,13 @@
 
     <div class="project">
       <h3>Sistem Diagnosa Penyakit (UAS Kecerdasan Buatan)</h3>
-      <p>Aplikasi web berbasis Flask dan HTML untuk mendiagnosa penyakit berdasarkan gejala yang dipilih pengguna.</p>
+      <p>Aplikasi web berbasis Flask dan HTML untuk mendiagnosa penyakit berdasarkan gejala.</p>
       <p><strong>Tech Stack:</strong> Python (Flask), HTML, CSS, CSV</p>
-      <p><a href="https://web-production-cccc1.up.railway.app/" target="_blank">🔗 Live Demo</a> | <a href="https://github.com/Hill-JAVAnese/uas-ai" target="_blank">📦 GitHub Repo</a></p>
+      <p>
+        <a href="https://web-production-cccc1.up.railway.app/" target="_blank">🔗 Live Demo</a> |
+        <a href="https://github.com/Hill-JAVAnese/uas-ai" target="_blank">📦 GitHub Repo</a>
+      </p>
     </div>
-
-    <!-- Tambah proyek lainnya di bawah ini -->
-    <!-- <div class="project">...</div> -->
 
   </section>
 
