--- a/index.html
+++ b/index.html
@@ -52,6 +52,15 @@
       color: #64748b;
     }
   </style>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-6CZTFGNPB1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-6CZTFGNPB1');
+</script>
 </head>
 <body>
   <header>
